--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,3 +37,52 @@ body{
 a {
     text-decoration: none;
 }
+
+li {
+    text-align: center;
+    display: none;
+    background-color: #f8f8f8;
+    border: 1px solid #ccc;
+    padding: 2%;
+    margin-bottom: 1px;
+    border-radius: 5px;
+    list-style: none;
+    width: 200px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+}
+li:nth-child(-n+7) {
+    display: flex;
+}
+
+li:nth-child(1) {
+/* Estilos para el elemento del medio */
+    transform: scale(0.8);
+}
+li:nth-child(2) {
+    /* Estilos para el elemento del medio */
+    transform: scale(0.9);
+}
+li:nth-child(3) {
+    /* Estilos para el elemento del medio */
+    transform: scale(1);
+    margin-bottom: 7%;
+}
+li:nth-child(4) {
+    /* Estilos para el elemento del medio */
+    transform: scale(1.4);
+}
+li:nth-child(5) {
+    /* Estilos para el elemento del medio */
+    transform: scale(1);
+    margin-top: 7%;
+}
+li:nth-child(6) {
+    /* Estilos para el elemento del medio */
+    transform: scale(0.9);
+}
+li:nth-child(7) {
+    /* Estilos para el elemento del medio */
+    transform: scale(0.8);
+}
