--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,3 +86,5 @@ li:nth-child(7) {
     /* Estilos para el elemento del medio */
     transform: scale(0.8);
 }
+
+/********************************** TIMER **********************************/
