--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,14 +6,9 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
 }
 
-.grid_tools{
-    display: grid;
-    grid-template-columns: 40% 40%;
-    grid-template-rows: 425px;
-    grid-gap: 10% 10%;
-}
 .item{
     background-color: whitesmoke;
     text-align: center;
@@ -56,7 +51,6 @@ li {
 li:nth-child(-n+7) {
     display: flex;
 }
-
 li:nth-child(1) {
 /* Estilos para el elemento del medio */
     transform: scale(0.8);
@@ -88,6 +82,19 @@ li:nth-child(6) {
 li:nth-child(7) {
     /* Estilos para el elemento del medio */
     transform: scale(0.8);
+}
+
+#rotar {
+  font-size: 100%;
+  padding-inline: 30%;
+  padding-bottom: 10%;
+  padding-top: 10%;
+}
+#container_list{
+}
+.container_botom{
+  margin: auto;
+  width: 200px;
 }
 
 /********************************** TIMER **********************************/
