--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,3 +97,209 @@ li:nth-child(7) {
   width: 200px;
 }
 
+
+/*******TRY*********/
+#countdown-container {
+  text-align: center;
+  font-size: 4em;
+}
+
+#countdown {
+  margin: 0.5em;
+  padding: 0.5em;
+  border: 2px solid black;
+  border-radius: 0.5em;
+  display: inline-block;
+  width: 4.5em;
+}
+
+#current-date {
+  font-size: 1.5em;
+}
+
+#stop-button,
+#restart-button,
+#edit-button,
+#start-button,
+#music-upload-button {
+  margin: 1em;
+  font-size: 1.5em;
+  padding: 0.5em 1em;
+}
+
+.edit-section {
+  margin: 1em 0;
+}
+
+#music-upload {
+  margin: 1em;
+}
+
+#edit-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+#edit-popup-content {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 1em;
+  border-radius: 0.5em;
+}
+
+.fade-in {
+    opacity: 0;
+}
+
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f2f2f2;
+  text-align: center;
+}
+
+h1 {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 48px;
+}
+
+#countdown {
+  margin: 50px auto;
+  font-size: 80px;
+  color: #333;
+}
+
+#current-date {
+  font-size: 24px;
+  color: #666;
+  margin-bottom: 30px;
+}
+
+button {
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  background-color: #4285f4;
+  color: #fff;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #3367d6;
+}
+
+#edit-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+}
+
+#edit-popup-content {
+  background-color: #fff;
+  margin: 10% auto;
+  padding: 20px;
+  border-radius: 5px;
+  width: 50%;
+}
+
+.popup-input {
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.popup-label {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.popup-select {
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  width: 100%;
+}
+
+.popup-music {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.popup-music-label {
+  font-size: 18px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.popup-music-select {
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: 5px;
+  width: 100%;
+}
+
+.popup-music-upload {
+  opacity: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+
+.popup-music-upload-label {
+  padding: 10px;
+  margin-left: 10px;
+  font-size: 18px;
+  border-radius: 5px;
+  background-color: #4285f4;
+  color: #fff;
+  cursor: pointer;
+}
+
+.popup-music-upload-label:hover {
+  background-color: #3367d6;
+}
+
+.popup-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+#countdown-buttons {
+  margin-top: 50px;
+}
+
+#countdown-buttons button {
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 768px) {
+  #edit-popup-content {
+    width: 80%;
+  }
+}
