--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,23 @@
-body{
-    background-color: white;
+:root {
+    --color-fuente: #000;
+    --color-fondo: #fff;
 }
+/*SET LIGHT MODE*/
+[tema="light"] {
+    --color-fuente: #ffffff;
+    --color-fondo: #000;
+}
+/* INDEX */
+body{
+    background-color: var(--color-fondo);
+    color: var(--color-fuente);
+    font-family: Arial, sans-serif;
+    text-align: center;
+}
+/*RULETTE STYLE */
 .central_div{
+    background-color: var(--color-fondo);
+    color: var(--color-fuente);
     position: absolute;
     top: 50%;
     left: 50%;
@@ -10,7 +26,7 @@ body{
 }
 
 .item{
-    background-color: whitesmoke;
+    background-color: var(--color-fondo);
     text-align: center;
     border-radius: 8px;
     border-width: 1px;
@@ -37,7 +53,7 @@ a {
 li {
     text-align: center;
     display: none;
-    background-color: #f8f8f8;
+    background-color: var(--color-fondo);
     border: 1px solid #ccc;
     padding: 2%;
     margin-bottom: 1px;
@@ -96,6 +112,46 @@ li:nth-child(7) {
   margin: auto;
   width: 200px;
 }
+
+/*NAV STYLE*/
+.menu_nav{
+    text-align: center;
+    color: var(--color-fuente);
+    padding: 1%;
+    transition: all 300ms;
+    margin-bottom: 1%;
+    border-bottom-style: solid;
+    border-top-style: solid;
+    border-top-width: 0.05mm;
+    border-bottom-width: 0.05mm;
+    border-color: var(--color-fuente)}
+
+.menu_opc:hover{color: dodgerblue;}
+
+.menu_opc{
+    text-decoration: none;
+    color: var(--color-fuente);
+    font-weight:bold;
+    font-size: 100%;
+    padding: 0%;
+    margin: 2%;
+    border-radius: 7px;}
+
+.seccion_herramientas{width: 75%;}
+
+.contenedor_herramientas{display: flex;
+    margin: 0.5%}
+
+.imagen_herramientas{width: 20%;
+    margin-left: 2%;
+    margin-top: 5%;
+    margin-bottom: 1%;}
+
+.titulo_herramientas{text-decoration: none;
+    font-weight: bold;
+    color: var(--color-fuente);}
+
+.titulo_herramientas:hover{ color: dodgerblue; }
 
 
 /*******TRY*********/
@@ -160,11 +216,6 @@ li:nth-child(7) {
     opacity: 0;
 }
 
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
-  text-align: center;
-}
 
 h1 {
   margin-top: 50px;
@@ -304,38 +355,62 @@ button:hover {
   }
 }
 
-.menu_nav{text-align: center;
-    padding: 1%;
-    transition: all 300ms;
-    margin-bottom: 1%;
-    border-bottom-style: solid;
-    border-top-style: solid;
-    border-top-width: 0.05mm;
-    border-bottom-width: 0.05mm;
-    border-color: #6C5E46}
+/*THEM BUTTON*/
+#switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
 
-.menu_opc:hover{color: dodgerblue;}
+#switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
 
-.menu_opc{text-decoration: none;
-    color: black;
-    font-weight:bold;
-    font-size: 100%;
-    padding: 0%;
-    margin: 2%;
-    border-radius: 7px;}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color:var(--color-fuente);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
 
-.seccion_herramientas{width: 75%;}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color:var(--color-fondo);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
 
-.contenedor_herramientas{display: flex;
-    margin: 0.5%}
+input:checked + .slider {
+    background-color: var(--color-fuente);
+}
 
-.imagen_herramientas{width: 20%;
-    margin-left: 2%;
-    margin-top: 5%;
-    margin-bottom: 1%;}
+input:focus + .slider {
+    box-shadow: 0 0 1px var(--color-fuente);
+}
 
-.titulo_herramientas{text-decoration: none;
-    font-weight: bold;
-    color: black;}
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
 
-.titulo_herramientas:hover{ color: dodgerblue; }
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
