--- a/CSS/style.css
+++ b/CSS/style.css
@@ -114,12 +114,14 @@ li:nth-child(7) {
 }
 
 /*NAV STYLE*/
+.header {padding-top: 2%;}
 .menu_nav{
     text-align: center;
     color: var(--color-fuente);
-    padding: 1%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     transition: all 300ms;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
     border-bottom-style: solid;
     border-top-style: solid;
     border-top-width: 0.05mm;
@@ -130,26 +132,46 @@ li:nth-child(7) {
 
 .menu_opc{
     text-decoration: none;
+    padding-top: 40%;
     color: var(--color-fuente);
     font-weight:bold;
     font-size: 100%;
-    padding: 0%;
-    margin: 2%;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-top: 5%;
     border-radius: 7px;}
 
-.seccion_herramientas{width: 75%;}
+.menu_opc_last{
+    text-decoration: none;
+    padding-top: 40%;
+    color: var(--color-fuente);
+    font-weight:bold;
+    font-size: 100%;
+    margin-left: 5%;
+    margin-right: 30%;
+    margin-top: 2%;
+    border-radius: 7px;}
 
-.contenedor_herramientas{display: flex;
-    margin: 0.5%}
-
-.imagen_herramientas{width: 20%;
-    margin-left: 2%;
+.seccion_herramientas{display: flex;
     margin-top: 5%;
-    margin-bottom: 1%;}
+    margin-right: 5%;
+    margin-left: 5%;
+}
+
+.contenedor_herramientas{
+  width: 80%;
+}
+.imagen_herramientas{width: 30%;
+    margin-left: 5%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    margin-right: 5%;}
 
 .titulo_herramientas{text-decoration: none;
     font-weight: bold;
-    color: var(--color-fuente);}
+    color: var(--color-fuente);
+    padding-top: 2%;
+    padding-bottom: 2%;}
 
 .titulo_herramientas:hover{ color: dodgerblue; }
 
@@ -356,6 +378,7 @@ button:hover {
 }
 
 /*THEM BUTTON*/
+.menu_button{margin-left: 5%}
 #switch {
     position: relative;
     display: inline-block;
@@ -379,6 +402,7 @@ button:hover {
     background-color:var(--color-fuente);
     -webkit-transition: .4s;
     transition: .4s;
+
 }
 
 .slider:before {
