--- a/CSS/style.css
+++ b/CSS/style.css
@@ -152,6 +152,8 @@ li:nth-child(7) {
     margin-top: 2%;
     border-radius: 7px;}
 
+.menu_opc_last:hover{color: dodgerblue;}
+
 .seccion_herramientas{display: flex;
     margin-top: 5%;
     margin-right: 5%;
