bottom new place

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -440,3 +440,11 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+.input_cronometro{
+    align-content: center;
+    align-items: center;
+}
+
+.input{
+}
